src/objects/FA_FBQuestionSet__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To capture the Question related to participant feedback</description>
    <fields>
        <fullName>FA_QuestionOrder__c</fullName>
        <label>QuestionOrder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FA_QuestionType__c</fullName>
        <label>QuestionType</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FA_Rating__c</fullName>
        <label>Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>FA_FBQuestionSet</label>
</CustomObject>